Some Deers and Methods added

--- a/Assets/ToDo.txt
+++ b/Assets/ToDo.txt
@@ -1,2 +1,12 @@
 ToDo list:
-Skybox materials clear+rainy
+В общем, работал над оленями. Суть того, что нужно кому-то сделать(я займусь этим вечером в сб, но вечер-понятие растяжимое):
+Сделать нормальный метод добавления стандартного Оленя в классе Deer(который надо создать+наследование от AnimalS). в deer нужно хранить
+модельку(GO) и создавать там объект класса, думаю. Хотя, может, не стоит разносить животных ещё по классам-будет проще и быстрее.
+Создаём стандартного Оленя при генерации Оленей (в классе Animals), передаём в World. Там в массивчик животных оно записывается и пихается на сцену
+По-хорошему, нужно ещё разобраться с анимациями(которых нет-надо сделать)(а у этой модельки вроде нет скелета, чтобы их делать)
++сделать текстуры(они под странными названиями лежат в Textures, хз, как оно должно собираться).
+После пуша на сцену-в FixedUpdate нужно юзать метод AnimalMove(тип разделяем движения животных/ландшафт/Деревья)
+Там по индвидуальным параметрам каждого, с помощью методов Animals (Check всякие) понимаем, чё нам надо от конкретного Оленя и делаем. 
+Вопрос:двигать Оленя тупо по трансформу или там какая-то сила была? Не забываем, что нужен свой движок физический так-то.
+Пока пусть Олени хотя бы по квадрату ходят, что-то такое
+ИИ-позже. Нужно сначала их движение/генерацию адекватно организовать
